--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
             <ul class="items margin-top-xl large">
               <li onclick="" class="ios col-xs-6 col-sm-6 col-md-5 col-lg-4">
                 <div class="item">
-                  <img src="images/portfolio/color.dev.png" />
+                  <img src="images/portfolio/direct-msg.png" />
 
                   <div class="icons">
                     <a
@@ -401,7 +401,7 @@
                     <h3>
                       Direct Message for Whatsapp
                     </h3>
-                    <p>Swift 5</p>
+                    <p>Swift 5, Firebase, GoogleAd</p>
                   </div>
                   <div class="imageOverlay"></div>
                 </div>
@@ -409,7 +409,7 @@
 
               <li onclick="" class="ios col-xs-6 col-sm-6 col-md-5 col-lg-4">
                 <div class="item">
-                  <img src="images/portfolio/tic-tac.png" />
+                  <img src="images/portfolio/HDFC-MF.png" />
 
                   <div class="icons">
                     <a
@@ -442,47 +442,21 @@
 
               <li onclick="" class="ios col-xs-6 col-sm-6 col-md-5 col-lg-4">
                 <div class="item">
-                  <img src="images/portfolio//wikiGuess.png" />
+                  <img src="images/portfolio//myK+.png" />
 
                   <div class="icons">
                     <a
-                      href="images/portfolio/wikiGuess.png"
+                      href="images/portfolio/myK+.png"
                       title="View image"
                       class="openButton"
                       data-fancybox
-                      data-caption="iOS game to test your vocabulary and improve your english"
-                    >
-                      <i class="fa fa-info-circle"></i>
-                    </a>
-
-                    <a href="" target="_blank" class="projectLink">
-                      <i class="fa fa-link"></i>
-                    </a>
-                  </div>
-                  <div class="portfolio-info">
-                    <h3>WikiGuess - Can you guess the words?</h3>
-                    <p>Swift 5, Alamofire</p>
-                  </div>
-                  <div class="imageOverlay"></div>
-                </div>
-              </li>
-              <li onclick="" class="ios col-xs-6 col-sm-6 col-md-5 col-lg-4">
-                <div class="item">
-                  <img src="images/portfolio/spacebasic.png" />
-                  ̉
-                  <div class="icons">
-                    <a
-                      href="images/portfolio/spacebasic.png"
-                      title="View image"
-                      class="openButton"
-                      data-fancybox
-                      data-caption="Spacebasic is a student communication and housing application."
+                      data-caption="K+"
                     >
                       <i class="fa fa-info-circle"></i>
                     </a>
 
                     <a
-                      href="https://apps.apple.com/ng/app/spacebasic/id1217386342"
+                      href="https://apps.apple.com/vn/app/k-live-tv-vod/id1079823004"
                       target="_blank"
                       class="projectLink"
                     >
@@ -490,10 +464,39 @@
                     </a>
                   </div>
                   <div class="portfolio-info">
-                    <h3>Spacebasic (Company)</h3>
+                    <h3>Enjoy hundreds of live TV channels, movies, series</h3>
+                    <p>Swift 5, Alamofire, Crashlytics, Firebase</p>
+                  </div>
+                  <div class="imageOverlay"></div>
+                </div>
+              </li>
+              <li onclick="" class="ios col-xs-6 col-sm-6 col-md-5 col-lg-4">
+                <div class="item">
+                  <img src="images/portfolio/rocketFuel.png" />
+                  ̉
+                  <div class="icons">
+                    <a
+                      href="images/portfolio/rocketFuel.png"
+                      title="View image"
+                      class="openButton"
+                      data-fancybox
+                      data-caption="Rocketfuel provides a 1-click payment solution to make payments with 50+ cryptocurrencies"
+                    >
+                      <i class="fa fa-info-circle"></i>
+                    </a>
+
+                    <a
+                      href="https://shubham0812.github.io/SearchX/"
+                      target="_blank"
+                      class="projectLink"
+                    >
+                      <i class="fa fa-link"></i>
+                    </a>
+                  </div>
+                  <div class="portfolio-info">
+                    <h3>Rocketfuel SDK.</h3>
                     <p>
-                      Swift 5, Alamofire, AlamofireImage, Crashlytics, Firebase,
-                      Freshchat
+                      Swift 5, Alamofire, AlamofireImage, Crashlytics, Firebase
                     </p>
                   </div>
                   <div class="imageOverlay"></div>
@@ -501,21 +504,21 @@
               </li>
               <li onclick="" class="ios col-xs-6 col-sm-6 col-md-5 col-lg-4">
                 <div class="item">
-                  <img src="images/portfolio/wingspan.png" />
+                  <img src="images/portfolio/tata-sky.png" />
 
                   <div class="icons">
                     <a
-                      href="images/portfolio/wingspan.png"
+                      href="images/portfolio/tata-sky.png"
                       title="View image"
                       class="openButton"
                       data-fancybox
-                      data-caption="Infosys Wingspan is an iOS based learning application by Infosys so that companies will be able to help their employees learn new skills and master existing ones."
+                      data-caption="Enjoy live telecasts with over 600+ channels"
                     >
                       <i class="fa fa-info-circle"></i>
                     </a>
 
                     <a
-                      href="https://apps.apple.com/us/app/infosys-wingspan/id1447120631"
+                      href="https://apps.apple.com/in/app/tata-sky-live-tv-recharge/id385090000"
                       target="_blank"
                       class="projectLink"
                     >
@@ -523,7 +526,7 @@
                     </a>
                   </div>
                   <div class="portfolio-info">
-                    <h3>Infosys Wingspan (Company)</h3>
+                    <h3>Tata Sky</h3>
                     <p>Swift 5, Alamofire, SwiftyJSON, Cryptoswift</p>
                   </div>
                   <div class="imageOverlay"></div>
@@ -531,21 +534,21 @@
               </li>
               <li onclick="" class="ios col-xs-6 col-sm-6 col-md-5 col-lg-4">
                 <div class="item">
-                  <img src="images/portfolio/lex.png" />
+                  <img src="images/portfolio/tata-sky.png" />
 
                   <div class="icons">
                     <a
-                      href="images/portfolio/lex.png"
+                      href="images/portfolio/tata-sky.png"
                       title="View image"
                       class="openButton"
                       data-fancybox
-                      data-caption="Infosys Lex is an iOS based learning application for the employees of Infosys to upskill and refactor themselves, the application is based on the Learn on the Model and it supports viewing of content offline along with other exiciting features such as Leaderboards and much more.ˀ"
+                      data-caption="Enjoy live telecasts with over 600+ channels"
                     >
                       <i class="fa fa-info-circle"></i>
                     </a>
 
                     <a
-                      href="https://apps.apple.com/us/app/infosys-lex/id1372091347"
+                      href="https://apps.apple.com/in/app/tata-sky-live-tv-recharge/id385090000"
                       target="_blank"
                       class="projectLink"
                     >
@@ -553,7 +556,7 @@
                     </a>
                   </div>
                   <div class="portfolio-info">
-                    <h3>Infosys Lex (Company)</h3>
+                    <h3>Tata Sky</h3>
                     <p>
                       Swift 5, Alamofire, SwiftyJSON, Cryptoswift, HaishinKit
                     </p>
@@ -695,7 +698,7 @@
           Like what you see?
         </p>
         <h2 id="contact-me" style="opacity: 0;">I'd love to hear from you!</h2>
-        <a href="mailTo:singh.shubham0812@gmail.com" class="contactButton"
+        <a href="mailTo:ios.varun@gmail.com" class="contactButton"
           ><i class="fas fa-paper-plane"></i
           ><span style="font-weight: 700;"> GET IN TOUCH!</span></a
         >
@@ -705,32 +708,32 @@
     <div class="copyrightSection">
       <h3>Connect with me on</h3>
       <div class="icon-wrap flex text-center" style="height: 105px;">
-        <a href="https://www.instagram.com/shubham_iosdev/" target="_blank">
+        <a href="https://www.instagram.com/varunvarshney007/" target="_blank">
           <div class="flex icon" id="icon-5">
             <i class="fab fa-instagram"></i>
           </div>
         </a>
 
-        <a href="https://medium.com/@singh.shubham0812" target="_blank">
+        <a href="https://ios-varun.medium.com/" target="_blank">
           <div class="flex icon" id="icon-3">
             <i class="fab fa-medium-m"></i>
           </div>
         </a>
 
-        <a href="https://www.linkedin.com/in/shubham0812/" target="_blank">
+        <a href="https://www.linkedin.com/in/varun-varshney-a59a4212/" target="_blank">
           <div class="flex icon" id="icon-2">
             <i class="fab fa-linkedin-in"></i>
           </div>
         </a>
 
-        <a href="https://github.com/Shubham0812" target="_blank">
+        <a href="https://github.com/iosvarun" target="_blank">
           <div class="flex icon" id="icon-5">
             <i class="fab fa-github"></i>
           </div>
         </a>
 
         <a
-          href="https://stackoverflow.com/users/10242680/shubham"
+          href="https://stackoverflow.com/users/17002094/iosvarun"
           target="_blank"
         >
           <div class="flex icon" id="icon-5">
