updated the html file
.

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 
                 <div class="squareContent">
                   <h2 class="counter">5</h2>
-                  <h3>Freelancing projects</h3>
+                  <h3>Freelancing s</h3>
                 </div>
               </div>
             </div>
@@ -362,9 +362,7 @@
 
           <div class="filter" style="opacity: 0;">
             <ul id="filters">
-              <li><a href="#" data-filter="*">ALL</a></li>
               <li><a href="#" data-filter=".ios" class="current">IOS</a></li>
-              <li><a href="#" data-filter=".web">WEB</a></li>
             </ul>
           </div>
 
